src/shell-glsl-quad.c
@@ -139,6 +139,7 @@ shell_glsl_quad_constructed (GObject *object)
   if (G_UNLIKELY (klass->base_pipeline == NULL))
     {
       klass->base_pipeline = cogl_pipeline_new (ctx);
+      cogl_pipeline_set_blend (klass->base_pipeline, "RGBA = ADD (SRC_COLOR * (SRC_COLOR[A]), DST_COLOR * (1-SRC_COLOR[A]))", NULL);
 
       if (klass->build_pipeline != NULL)
         klass->build_pipeline (self);
